// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createGHA validate should run GHA creation workflow 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/rdme-validate.yaml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`#createGHA validate should run GHA creation workflow 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # You can add more branches by duplicating this line below
      # for each branch you'd like to add!
      - main

jobs:
  simple:
    name: My First GitHub Action
    runs-on: ubuntu-latest
    steps:
      - name: Checkout GitHub Action
        uses: actions/checkout@v3

      - name: Run \`validate\` command
        uses: readmeio/rdme@7.5.0
        with:
          rdme: validate petstore.json
"
`;

exports[`#createGHA validate should run GHA creation workflow with \`--github\` flag 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/rdme-validate-with-github-flag.yaml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`#createGHA validate should run GHA creation workflow with \`--github\` flag 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # You can add more branches by duplicating this line below
      # for each branch you'd like to add!
      - main

jobs:
  simple:
    name: My First GitHub Action
    runs-on: ubuntu-latest
    steps:
      - name: Checkout GitHub Action
        uses: actions/checkout@v3

      - name: Run \`validate\` command
        uses: readmeio/rdme@7.5.0
        with:
          rdme: validate petstore.json
"
`;
